udate Head sheet

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,43 @@
         $('#button_contact').click(function () {
             window.location.href = "contacts.html";
         });
+        var div_service_description = $('.div_service_description');
+        $('#button_vz').click(function(){
+            div_service_description.empty();
+            div_service_description.append(text_vz);
+        });
+        $('#button_ing').click(function(){
+            div_service_description.empty();
+            div_service_description.append(text_ing);
+        });
+        $('#button_kom').click(function(){
+            div_service_description.empty();
+            div_service_description.append(text_kom);
+        });
+        $('#button_blago').click(function(){
+            div_service_description.empty();
+            div_service_description.append(text_blago);
+        });
+        $('#button_else').click(function(){
+            div_service_description.empty();
+            div_service_description.append(text_else);
+        });
+        var text_v = "Будівельне водопониження - це комплекс спеціальних заходів, спрямованих на стабілізацію водоносного грунту в період проведення будівельних робіт. " +
+            "В разі проведення земляних робіт на промислових майданчиках, а також при спорудженні гідротехнічних споруд доводиться стикатися з обводненням будівельних майданчиків, поверхневими і підземними водами, атмосферними опадами і інфільтраційними водами. Обводнення будівельних котлованів і траншей в залежності від глибини їх закладення і положення рівня грунтових вод може мати постійний або тимчасовий характер. При закладенні основ котлованів і траншей нижче мінімального рівня грунтових вод відбувається постійне обводнення, а при закладенні вище рівня грунтових вод - тимчасове, за рахунок капілярного підняття води. На умови обводнення будівельних майданчиків впливає геологічна будова району. Якщо водоносні ґрунти повсюдно перекриті слабопроницаемих суглинками або глинами, доповнення запасів підземних вод за рахунок атмосферних опадів та поверхневих вод обмежено. Однак ці умови сприяють утворенню поверхневих вод. В результаті нерідко доводиться стикатися з обводненням будівельних виробок одночасно безнапірними і напірними водонаносними горизонтами. Підвищений рівень грунтових вод може створювати значні проблеми в ході будівництва об'єкта. В такому випадку до початку земляних робіт в обов'язковому порядку вживаються заходи з водопониження. Залежно від параметрів котловану, геологічних умов і гідрологічних властивостей грунту, можна виконувати глибинне водозниження, застосовуючи різні технології. Найбільш мобільним і ефективним способом зниження ґрунтових вод на будівельних майданчиках є іглофільтри. " +
+            "Іглофільтри поміщаються в свердловини по периметру об'єкта, потім вони з'єднуються трубами в одну систему і підключаються до помпонасосу. " +
+            "У трубах створюється вакуум, а води грунту засмоктуються через фільтри в колектор, відводяться за межі території будівництва за допомогою насосів. " +
+            "Система відрізняється досить складною конструкцією, яка складається з необхідної кількості голкофільтрів, самовсмоктуючого насоса і трубопроводу. На кінці труби знаходиться фільтр, який виконує відразу кілька функцій: обмежує потік води, що пропускається в колектор і захищає систему від попадання різних включень з грунту. Підземні води відкачуються в резервуари, або за межі будівельного майданчика. " +
+            "Для вибору варіанту установки обладнання, в обов'язковому порядку враховують різновид грунту. При виконанні будівельного водозниження голкофільтрами з рівнем води більше 6 м, застосовують багатоярусну систему. " +
+            "На великих будівельних ділянках зазвичай використовуються установки, які розраховані на 50-100 голкофільтрів. Водозниження голкофільтрами - це оптимальне рішення для грунтів з коефіцієнтом фільтрації 2-40 м/доб. " +
+            "Дистанція між фільтруючими ланками вибирається згідно з проведеними розрахунками, так само важливий кошторис і підрахунок розцінок. Залежно від умов припливу води, розмірів котлованів, застосовуваного насосного агрегату, кількість голкофільтрів може становити від 20 штук. " +
+            "При цьому враховуються параметри майбутнього об'єкта, а також економічне обґрунтування.";
+
+        var text_vz = $('<p>' +'<img class="img_service" src="images/services_menu_icon/vz.jpg">'+text_v+ '</p>' );
+        var text_ing = $('<p>' +'<img class="img_service" src="images/services_menu_icon/ing.jpg">'+'В разі проведення земляних робіт на промислових майданчиках, а також при спорудженні гідротехнічних споруд доводиться стикатися з обводненням будівельних майданчиків, поверхневими і підземними водами, атмосферними опадами і інфільтраційними водами. Обводнення будівельних котлованів і траншей в залежності від глибини їх закладення і положення рівня грунтових вод може мати постійний або тимчасовий характер. При закладенні основ котлованів і траншей нижче мінімального рівня грунтових вод відбувається постійне обводнення, а при закладенні вище рівня грунтових вод - тимчасове, за рахунок капілярного підняття води. На умови обводнення будівельних майданчиків впливає геологічна будова району. Якщо водоносні ґрунти повсюдно перекриті слабопроницаемих суглинками або глинами, доповнення запасів підземних вод за рахунок атмосферних опадів та поверхневих вод обмежено. Однак ці умови сприяють утворенню поверхневих вод. В результаті нерідко доводиться стикатися з обводненням будівельних виробок одночасно безнапірними і напірними водонаносними горизонтами.' + '</p>' );
+        var text_kom = $('<p>' +'<img class="img_service" src="images/services_menu_icon/kom.jpg">'+'В разі проведення земляних робіт на промислових майданчиках, а також при спорудженні гідротехнічних споруд доводиться стикатися з обводненням будівельних майданчиків, поверхневими і підземними водами, атмосферними опадами і інфільтраційними водами. Обводнення будівельних котлованів і траншей в залежності від глибини їх закладення і положення рівня грунтових вод може мати постійний або тимчасовий характер. При закладенні основ котлованів і траншей нижче мінімального рівня грунтових вод відбувається постійне обводнення, а при закладенні вище рівня грунтових вод - тимчасове, за рахунок капілярного підняття води. На умови обводнення будівельних майданчиків впливає геологічна будова району. Якщо водоносні ґрунти повсюдно перекриті слабопроницаемих суглинками або глинами, доповнення запасів підземних вод за рахунок атмосферних опадів та поверхневих вод обмежено. Однак ці умови сприяють утворенню поверхневих вод. В результаті нерідко доводиться стикатися з обводненням будівельних виробок одночасно безнапірними і напірними водонаносними горизонтами.' + '</p>' );
+        var text_blago = $('<p>' +'<img class="img_service" src="images/services_menu_icon/blago.jpg">'+'В разі проведення земляних робіт на промислових майданчиках, а також при спорудженні гідротехнічних споруд доводиться стикатися з обводненням будівельних майданчиків, поверхневими і підземними водами, атмосферними опадами і інфільтраційними водами. Обводнення будівельних котлованів і траншей в залежності від глибини їх закладення і положення рівня грунтових вод може мати постійний або тимчасовий характер. При закладенні основ котлованів і траншей нижче мінімального рівня грунтових вод відбувається постійне обводнення, а при закладенні вище рівня грунтових вод - тимчасове, за рахунок капілярного підняття води. На умови обводнення будівельних майданчиків впливає геологічна будова району. Якщо водоносні ґрунти повсюдно перекриті слабопроницаемих суглинками або глинами, доповнення запасів підземних вод за рахунок атмосферних опадів та поверхневих вод обмежено. Однак ці умови сприяють утворенню поверхневих вод. В результаті нерідко доводиться стикатися з обводненням будівельних виробок одночасно безнапірними і напірними водонаносними горизонтами.' + '</p>' );
+        var text_else = $('<p>' +'<img class="img_service" src="images/services_menu_icon/else.jpg">'+'В разі проведення земляних робіт на промислових майданчиках, а також при спорудженні гідротехнічних споруд доводиться стикатися з обводненням будівельних майданчиків, поверхневими і підземними водами, атмосферними опадами і інфільтраційними водами. Обводнення будівельних котлованів і траншей в залежності від глибини їх закладення і положення рівня грунтових вод може мати постійний або тимчасовий характер. При закладенні основ котлованів і траншей нижче мінімального рівня грунтових вод відбувається постійне обводнення, а при закладенні вище рівня грунтових вод - тимчасове, за рахунок капілярного підняття води. На умови обводнення будівельних майданчиків впливає геологічна будова району. Якщо водоносні ґрунти повсюдно перекриті слабопроницаемих суглинками або глинами, доповнення запасів підземних вод за рахунок атмосферних опадів та поверхневих вод обмежено. Однак ці умови сприяють утворенню поверхневих вод. В результаті нерідко доводиться стикатися з обводненням будівельних виробок одночасно безнапірними і напірними водонаносними горизонтами.' + '</p>' );
+
     })
 </script>
 <head>
@@ -42,34 +79,66 @@
     </div>
 </header>
 <div id="div_body">
-    <div id="menu">
-        <button class="button_menu" id="button_about">Про нас</button>
-        <button class="button_menu" id="button_service">Послуги</button>
-        <button class="button_menu" id="button_experience">Наші роботи</button>
-        <button class="button_menu" id="button_contact">Контакти</button>
+
+<div id="div_head_menu">
+    <button class="button_menu" id="button_about">Про нас</button>
+    <button class="button_menu" id="button_service">Послуги</button>
+    <button class="button_menu" id="button_experience">Наші роботи</button>
+    <button class="button_menu" id="button_contact">Контакти</button>
+</div>
+<div id="div_services">
+    <div id="div_services_menu">
+        <ul>
+            <li class="services_menu" id="button_vz">
+                <a href="#">Водозниження</a>
+            </li>
+            <li class="services_menu" id="button_ing">
+                <a href="#">Інженерні мережі</a>
+            </li>
+            <li class="services_menu" id="button_kom">
+                <a href="#">Внутрішні комунікації</a>
+            </li>
+            <li class="services_menu" id="button_blago">
+                <a href="#">Благоустрій</a>
+            </li>
+            <li class="services_menu" id="button_else">
+                <a href="#">Інше</a>
+            </li>
+        </ul>
     </div>
-    <div id="div_short_intro">
-        <div class="div_intro_unit">
-            <img src="images/intro/timer.png" style="width: 150px; height: 150px"/>
-            <h2>Оперативність</h2>
-            <p> Матеріально-технічна база дозволяє виконувати завдання з мінімальними затратами часу. <br>Ми працюємо 24 години на добу 7 днів на тиждень.</p>
-        </div>
-        <div class="div_intro_unit">
-            <img src="images/intro/reab.png" style="width: 150px; height: 150px">
-            <h2>Надійність</h2>
-            <p>Наша компанія заснована на відповідальності. <br> Ми гарантуємо професіоналізм та компетентність у підході до кожного клієнта.</p>
-        </div>
-        <div class="div_intro_unit">
-            <img src="images/intro/quality.png" style="width: 150px; height: 150px">
-            <h2>Якість</h2>
-            <p>Працівники найвищої кваліфікації та сучасне обладнання залишають задоволеними найвимогливіших клієнтів.
-            </p>
-        </div>
+    <div class="div_service_description" hidden="hidden">
+            <img class="img_service" src="images/services_menu_icon/vz.jpg">
+            <img class="img_service" src="images/services_menu_icon/ing.jpg">
+            <img class="img_service" src="images/services_menu_icon/kom.jpg">
+            <img class="img_service" src="images/services_menu_icon/blago.jpg">
+            <img class="img_service" src="images/services_menu_icon/else.jpg">
     </div>
+</div>
+
+<div id="div_short_intro">
+    <div class="div_intro_unit">
+        <img src="images/intro/timer.png"/>
+        <h3>Оперативність</h3>
+        <p> Матеріально-технічна база дозволяє виконувати завдання з мінімальними затратами часу.<br>Ми працюємо 24
+            години на добу 7 днів на тиждень.</p>
+    </div>
+    <div class="div_intro_unit">
+        <img src="images/intro/reab.png">
+        <h3>Надійність</h3>
+        <p>Наша компанія заснована на відповідальності.<br> Ми гарантуємо професіоналізм та компетентність у підході до
+            кожного клієнта.</p>
+    </div>
+    <div class="div_intro_unit">
+        <img src="images/intro/quality.png">
+        <h3>Якість</h3>
+        <p>Працівники найвищої кваліфікації та сучасне обладнання залишають задоволеними найвимогливіших клієнтів.
+        </p>
+    </div>
+</div>
 
 </div>
-<footer>
-<!--    <div>
+<!--<footer>
+&lt;!&ndash;    <div>
         <ul>
             <li>&#9742; (093) 719-27-92</li>
         </ul>
@@ -79,8 +148,8 @@
             <li>&#9993; budmereja@gmail.com</li>
             <li>&#9993; skolota12@gmail.com</li>
         </ul>
-    </div>-->
-</footer>
+    </div>&ndash;&gt;
+</footer>-->
 
 </body>
 </html>
