--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -28,7 +28,7 @@
     <div class="div_gallery_line">
         <div class="div_gallery_unit">
             <img src="images/dragomanova.jpg">
-            <h4>
+            <h4 class="image_sign">
                 м.Київ, вул. Драгоманова
             </h4>
         </div>
