udate Head sheet

--- a/src/about.html
+++ b/src/about.html
@@ -12,11 +12,11 @@
 </script>
 <head>
     <meta charset="UTF-8">
-    <title>Про нас</title>
+    <title>ТОВ Будінженермережа | БІМ | Про компанію | Стройинженерсеть | О компании БИМ</title>
 </head>
 <body>
 <header>
-    <div >
+    <div>
             <button class="button_menu" id="button_head_page" >Головна</button>
     </div>
     <div>
