--- a/src/contacts.html
+++ b/src/contacts.html
@@ -11,7 +11,7 @@
 </script>
 <head>
     <meta charset="UTF-8">
-    <title>Контакти</title>
+    <title>Контакти Будінженермережа | Контакты БИМ | Номер телефона</title>
 </head>
 <body>
 <header>
