--- a/src/index.html
+++ b/src/index.html
@@ -158,8 +158,8 @@
     })
 </script>
 <head>
-    <meta charset="UTF-8">
-    <title>Водопониження</title>
+    <meta charset="UTF-8" content="">
+    <title>Проведення робіт з промислового водозниження Київ | Водопониження грунтових вод | Водопонижение Киев | Будівництво інженерних мереж</title>
 </head>
 <body>
 <header>
