--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -12,7 +12,7 @@
 </script>
 <head>
     <meta charset="UTF-8">
-    <title>Наші роботи</title>
+    <title>Досвід роботи Будінженермережа з промислового водозниження грунтових вод | Портфоліо</title>
 </head>
 <body>
     <header>
@@ -27,26 +27,26 @@
 <div id="div_body">
     <div class="div_gallery_line">
         <div class="div_gallery_unit">
-            <img src="images/dragomanova.jpg">
+            <img src="images/portfolio/dragomanova.jpg">
             <h4 class="image_sign">
                 м.Київ, вул. Драгоманова
             </h4>
         </div>
 
         <div class="div_gallery_unit">
-            <img src="images/kaysarova.jpg">
+            <img src="images/portfolio/kaysarova.jpg">
             <h4 class="image_sign">
                 м.Київ, вул. Кайсарова
             </h4>
         </div>
         <div class="div_gallery_unit">
-            <img src="images/lukyanovka.jpg">
+            <img src="images/portfolio/lukyanovka.jpg">
             <h4 class="image_sign">
                 м.Київ, вул. Дегтярівська
             </h4>
         </div>
         <div class="div_gallery_unit">
-            <img src="images/gorkogo.jpg">
+            <img src="images/portfolio/gorkogo.jpg">
             <h4 class="image_sign">
                 м.Київ, вул. Горького
             </h4>
@@ -54,25 +54,25 @@
     </div>
     <div class="div_gallery_line">
         <div class="div_gallery_unit">
-            <img src="images/kpi.jpg">
+            <img src="images/portfolio/kpi.jpg">
             <h4 class="image_sign">
                 м.Київ, вул. Ванди Василевської
             </h4>
         </div>
         <div class="div_gallery_unit">
-            <img src="images/obuhovskaya.jpg">
+            <img src="images/portfolio/obuhovskaya.jpg">
             <h4 class="image_sign">
                 м.Київ, вул. Обухівська
             </h4>
         </div>
         <div class="div_gallery_unit">
-            <img src="images/pankivska.jpg">
+            <img src="images/portfolio/pankivska.jpg">
             <h4 class="image_sign">
                 м.Київ, вул. Паньківська
             </h4>
         </div>
         <div class="div_gallery_unit">
-            <img src="images/gatnoe.jpg">
+            <img src="images/portfolio/gatnoe.jpg">
             <h4 class="image_sign">
                 смт Гатне
             </h4>
