--- a/src/services.html
+++ b/src/services.html
@@ -12,7 +12,7 @@
 </script>
 <head>
     <meta charset="UTF-8">
-    <title>Послуги</title>
+    <title>Види робіт Будінженермережа | Промислове водозниження водопониження грунтових вод | Будівництво трубопроводів| </title>
 </head>
 <body>
 <header>
